<resources>
    <string name="app_name">Личный кабинет</string>
    <string name="app_logo">ЯкСтар</string>
    <string name="logo">com.ivanov.tech.session</string>
    <string name="subs">(demo activity)</string>
    <string name="session_login_textview_title">Введите логин и пароль</string>
    <string name="session_login_edittext_login_hint">логин</string>
    <string name="session_login_edittext_password_hint">пароль</string>
    <string name="session_login_button_login_text">Войти</string>
    <string name="session_login_button_to_register_text">Зарегистрироваться</string>
    <string name="session_register_edittext_surname_hint">Фамилия</string>
    <string name="session_register_edittext_name_hint">Имя</string>
    <string name="session_register_edittext_patr_hint">Отчество</string>
    <string name="session_register_edittext_email_hint">e-mail</string>
    <string name="session_register_edittext_phone_hint">Мобильный телефон</string>
    <string name="session_register_edittext_passport_num_hint">Серия и номер паспорта</string>
    <string name="session_register_edittext_passport_who_hint">Кем и когда выдан</string>
    <string name="session_register_textview_tarif_text">Выберите свой тариф</string>
    <string name="session_register_confirm_one_text">Я ознакомлен с <a href='https://lk.amtelcom.ru/b-/b-documents/__content/b-documents__content_type_rules.html'>правилами</a> оказания услуг ООО \"ТелИнТел\"</string>
    <string name="session_register_confirm_two_text">Я принимаю условия <a href='https://lk.amtelcom.ru/b-/b-documents/__content/b-documents__content_type_agriment.html'>договора-оферты</a></string>
    <string name="session_register_captcha_text_1">Введите код указанный на картинке</string>
    <string name="session_register_captcha_text_2">Обновить картинку</string>
    <string name="session_register_captcha_text_3">код</string>
    <string name="register_check_surname">Неверные данные в поле Фамилия\n (кириллица с заглавной буквы)</string>
    <string name="register_check_name">Неверные данные в поле Имя\n (кириллица с заглавной буквы)</string>
    <string name="register_check_patr">Неверные данные в поле Отчество\n (кириллица с заглавной буквы)</string>
    <string name="register_check_phone">Неверно указан номер телефона\n (10 цифр без пробелов)\n</string>
    <string name="register_check_passport_num">Неверно указаны паспортные данные\n (серия+номер \[10 цифр без пробелов\])</string>
    <string name="register_check_passport_who">Не указан кем и когда выдан паспорт</string>
    <string name="register_check_confirm">Должны быть приняты все условия договора</string>
    <string name="register_check_captcha">Вы должны ввести код указанный на картинке</string>
    <string name="register_warning_not_registered">Ошибка при регистрации</string>
    <string name="register_textview_success_message">Вы успешно зарегистрировались в системе. Ваша учетная запись будет активирована в течение 15 минут</string>
    <string name="register_textview_success_message_warning">Внимание! Настоятельно рекомендуем записать логин и пароль на бумаге</string>
    <string name="session_register_button_cancel">Отмена</string>
    <string name="session_register_button_next_second">Далее</string>
    <string name="session_register_button_next_last">Далее</string>
    <string name="session_register_button_back_first">Назад</string>
    <string name="session_register_button_back_second">Назад</string>
    <string name="session_register_button_submit">Зарегистрироваться</string>
    <string name="fragment_demo_menu_session">Аккаунт</string>
    <string name="fragment_demo_menu_logout">Выйти</string>
    <string name="fragment_demo_textview_gov_summary">Федеральный портал Гос.услуг</string>
    <string name="fragment_demo_textview_gov_link"><a href='http://www.gosuslugi.ru'> www.gosuslugi.ru</a></string>
    <string name="fragment_demo_textview_login">Логин:</string>
    <string name="fragment_demo_button_signout">Выйти</string>
    <string name="fragment_demo_textview_service_status">Статус услуги:</string>
    <string name="fragment_demo_textview_service_status_active">Услуга активна</string>
    <string name="fragment_demo_textview_service_status_disabled">Статус услуги: заблокирован</string>
    <string name="fragment_demo_textview_service_status_wait">ожидание ответа сервера</string>
    <string name="fragment_demo_textview_balance_key">Балансе:</string>
    <string name="fragment_demo_textview_balance_unit">руб</string>
    <string name="fragment_demo_button_balance_charge">Пополнить баланс</string>
    <string name="fragment_demo_textview_internet">Состояние интернета:</string>
    <string name="fragment_demo_textview_internet_on">онлайн</string>
    <string name="fragment_demo_textview_internet_off">отключен</string>
    <string name="fragment_demo_textview_internet_enabling">включение</string>
    <string name="fragment_demo_textview_internet_disabling">отключение</string>
    <string name="fragment_demo_textview_internet_waiting">ожидание</string>
    <string name="fragment_demo_textview_internet_error">ошибка</string>
    <string name="fragment_demo_textview_refresh_1">обновить</string>
    <string name="fragment_demo_textview_refresh_2">обновление</string>
    <string name="fragment_demo_button_connect">Подключить</string>
    <string name="fragment_demo_button_disconnect">Отключить</string>
    <string name="fragment_payment_cardact_textview_number">Введите 8-значный номер карты.</string>
    <string name="fragment_payment_cardact_textview_number_summary">Если на вашей карте номер состоит из 6 цифр, то добавьте перед ним два нуля</string>
    <string name="fragment_payment_cardact_textview_code">Введите код активации</string>
    <string name="fragment_payment_cardact_button_activate">Активировать карту</string>
    <string name="fragment_payment_cardact_button_back">Назад</string>
    <string name="fragment_payment_cardact_button_close">ОК</string>
    <string name="fragment_payment_visa_textview_amount">Введите сумму оплаты.</string>
    <string name="fragment_payment_visa_textview_amount_summary">Минимальная сумма оплаты 100 руб</string>
    <string name="fragment_payment_visa_button_pay">Перейти к оплате</string>
    <string name="fragment_payment_visa_button_back">Назад</string>
    <string name="fragment_payment_visa_button_close">ОК</string>
    <string name="fragment_payment_visa_textview_success">Оплата прошла успешно!</string>
    <string name="fragment_payment_root_button_back">Назад</string>
    <string name="fragment_payment_root_textview_title">Выберите способ оплаты</string>
    <string name="fragment_payment_root_textview_summary">Если у вас листочек с кодом выберите "Амтел-карта"</string>
    <string name="fragment_error_button_close">Закрыть</string>
    <string name="fragment_regdata_header_accaunt">Аккаунт</string>
    <string name="fragment_regdata_header_person">Личные данные</string>
    <string name="fragment_regdata_header_contact">Контакты</string>
    <string name="fragment_regdata_button_edit">Изменить данные</string>
    <string name="fragment_regdata_button_password_change">Сменить пароль</string>
    <string name="fragment_regdata_button_back">Назад</string>
    <string name="fragment_regdata_edit_edittext_hint">Пароль</string>
    <string name="fragment_regdata_edit_button_send">Отправить</string>
    <string name="fragment_regdata_edit_button_cancel">Отмена</string>
    <string name="fragment_tarif_change_textview_message">Внимание! Смена тарифа может происходить только 1 раз в месяц, первого числа календарного месяца</string>
    <string name="fragment_tarif_change_button_send">Сменить тариф</string>
    <string name="fragment_tarif_change_button_cancel">Отмена</string>
    <string name="fragment_tarif_change_textview_cancel_link"><u>Отменить смену тарифа</u></string>
    <string name="fragment_password_change_edittext_newpassword_hint">Введите новый пароль</string>
    <string name="fragment_password_change_edittext_passwordrepeat_hint">Повторить</string>
    <string name="fragment_password_change_edittext_currentpassword_hint">Пароль</string>
    <string name="fragment_password_change_button_send">Отправить</string>
    <string name="fragment_password_change_button_cancel">Отмена</string>
    <string name="fragment_register_info_button_close">Закрыть</string>
    <string name="fragment_warning_ssl_button_confirm">Разрешить</string>
    <string name="fragment_warning_ssl_button_dismiss">Отклонить</string>
    <string name="error_31_title">Сервер не найден</string>
    <string name="error_31_message">Для работы приложения вы должны подключиться к сети \"ЯкСтар\"</string>
    <string name="error_32_title">Ошибка обращения к серверу</string>
    <string name="error_32_message">Не могу получить идентификатор сессии</string>
    <string name="error_33_title">Ошибка обращения к серверу</string>
    <string name="error_33_message">Не могу получить список тарифов</string>
    <string name="error_34_title">Ошибка обращения к серверу</string>
    <string name="error_34_message">Не могу получить код безопасности</string>
    <string name="error_35_title">Ошибка обращения к серверу</string>
    <string name="error_35_message">Не могу выполнить запрос на регистрацию </string>
    <string name="error_36_title">Ошибка обращения к серверу</string>
    <string name="error_36_message">Запрос информации о клиенте </string>
    <string name="error_37_title">Ошибка обращения к серверу</string>
    <string name="error_37_message">Во время запроса проверки подключения к интернету</string>
    <string name="error_38_title">Ошибка обращения к серверу</string>
    <string name="error_38_message">Во время запроса подключения/отключения интернета</string>
    <string name="error_39_title">Ошибка обращения к серверу</string>
    <string name="error_39_message">Во время запроса информации о клиенте </string>
    <string name="error_51_title">Ошибка обращения к серверу</string>
    <string name="error_51_message">Во время запроса на изменение данных клиента </string>
    <string name="error_52_title">Ошибка обращения к серверу</string>
    <string name="error_52_message">Во время запроса изменения тарифа </string>
    <string name="error_53_title">Ошибка обращения к серверу</string>
    <string name="error_53_message">Во время запроса статуса изменения тарифа </string>
    <string name="error_41_title">Ошибка чтения данных</string>
    <string name="error_41_message">Не могу получить новый идентификатор сессии</string>
    <string name="error_42_title">Ошибка парсинга тарифов</string>
    <string name="error_42_message">Не могу прочитать ответ сервера, т.к. JSON-данные не совпадают</string>
    <string name="error_431_title">Ошибка регистрации</string>
    <string name="error_431_message">Возможно с вашего IP-адреса регистрировался другой пользователь. Попробуйте изменить ваш IP-адрес, и повторите регистрацию</string>
    <string name="error_432_title">Ошибка чтения данных</string>
    <string name="error_432_message">Отсутствует статус в JSON-ответе, либо ответ не пришел</string>
    <string name="error_441_title">Ошибка чтения данных</string>
    <string name="error_441_message">Ошибка чтения информации пользователя. Сервер вернул пустой ответ</string>
    <string name="error_442_title">Ошибка чтения данных</string>
    <string name="error_442_message">Ошибка чтения информации пользователя. JSON-ошибка</string>
    <string name="error_451_title">Ошибка чтения данных</string>
    <string name="error_451_message">Ошибка чтения статуса подключения к интернету. Сервер вернул пустой результат</string>
    <string name="error_452_title">Ошибка чтения данных</string>
    <string name="error_452_message">Ошибка чтения статуса подключения к интернету. JSON-ошибка</string>
    <string name="error_461_title">Ошибка чтения данных</string>
</resources>