<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/window_pading" >
    
    <EditText
        android:id="@+id/fragment_register_edittext_surname"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_register_edittext_surname_hint"
        android:inputType="textPersonName" >
        
        <requestFocus />        
    </EditText>
    
    <EditText
        android:id="@+id/fragment_register_edittext_name"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_register_edittext_name_hint"
        android:inputType="textPersonName" >
 
    </EditText>
    
    <EditText
        android:id="@+id/fragment_register_edittext_patr"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_register_edittext_patr_hint"
        android:inputType="textPersonName" >
 
    </EditText>

    <EditText
        android:id="@+id/fragment_register_edittext_email"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/window_pading"
        android:ems="10"
        android:hint="@string/session_register_edittext_email_hint"
        android:inputType="textEmailAddress" >
        
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="+"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/fragment_register_edittext_phone"
            style="@style/style_edittext_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/session_register_edittext_phone_hint"
            android:inputType="phone" />

    </LinearLayout>
    
    <EditText
        android:id="@+id/fragment_register_edittext_passport_num"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/window_pading"
        android:ems="10"
        android:hint="@string/session_register_edittext_passport_num_hint"
        android:inputType="textEmailAddress" >
        
    </EditText>
    
    <EditText
        android:id="@+id/fragment_register_edittext_passport_who"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_register_edittext_passport_who_hint"
        android:inputType="textEmailAddress" >        
    </EditText>
    
    <Button
        android:id="@+id/fragment_register_button_next_second"
        style="@style/style_button_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/window_pading"
        android:text="@string/session_register_button_next_second" />

    <Button
        android:id="@+id/fragment_register_button_cancel"
        style="@style/style_button_dialog_alter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_register_button_cancel" />

</LinearLayout>