<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="bottom|center_horizontal"
	    android:orientation="vertical"
	    android:padding="@dimen/window_pading"
	    android:weightSum="1.0" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1.0"
	        android:gravity="center"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/fragment_register_imageview_captcha"
	            android:layout_width="200dp"
	            android:layout_height="120dp"
	            android:background="@color/color_white"
	            android:padding="10dp"
	            android:src="@color/color_white" />
	
	        <Button
	            android:id="@+id/fragment_register_button_captcha_update"
	            style="@style/style_button_dialog_alter"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/session_register_captcha_text_2" />
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:text="@string/session_register_captcha_text_1"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
	        <EditText
	            android:id="@+id/fragment_register_edittext_captcha_code"
	            style="@style/style_edittext_dialog"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:gravity="center_horizontal"
	            android:hint="@string/session_register_captcha_text_3"
	            android:inputType="text" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:orientation="vertical" >
	
	        <CheckBox
	            android:id="@+id/fragment_register_checkbox_one"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/session_register_confirm_one_text" />
	
	        <CheckBox
	            android:id="@+id/fragment_register_checkbox_two"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:text="@string/session_register_confirm_two_text" />
	        
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/fragment_register_button_submit"
	            style="@style/style_button_dialog"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:text="@string/session_register_button_submit" />
	
	        <Button
	            android:id="@+id/fragment_register_button_back_second"
	            style="@style/style_button_dialog_alter"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/session_register_button_back_second" />
	    </LinearLayout>
</LinearLayout>