<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/window_pading" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/fragment_register_textview_success_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_textview_success_message"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/fragment_register_textview_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Ваш логин *** пароль ***"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/fragment_register_textview_success_message_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/color_white"
        android:padding="10dp"
        android:text="@string/register_textview_success_message_warning"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF8000" />

    <EditText
        android:id="@+id/fragment_register_edittext_login"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_login_edittext_login_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/fragment_register_edittext_password"
        style="@style/style_edittext_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_login_edittext_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/fragment_register_button_login"
        style="@style/style_button_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/window_pading"
        android:text="@string/session_login_button_login_text" />
    
</LinearLayout>