<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:weightSum="2.0" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/color_white"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/window_pading" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/session_login_textview_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/fragment_login_edittext_login"
            style="@style/style_edittext_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/session_login_edittext_login_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fragment_login_edittext_password"
            style="@style/style_edittext_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/session_login_edittext_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/fragment_login_button_login"
            style="@style/style_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/window_pading"
            android:text="@string/session_login_button_login_text" />

        <Button
            android:id="@+id/fragment_login_button_to_register"
            style="@style/style_button_dialog_alter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_login_button_to_register_text" />
    </LinearLayout>

</LinearLayout>