<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|center_horizontal"
		    android:orientation="vertical"
		    android:padding="@dimen/window_pading" >
		   
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="Смена пароля"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <EditText
		        android:id="@+id/fragment_password_change_edittext_newpassword"
		        style="@style/style_edittext_dialog"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/fragment_password_change_edittext_newpassword_hint"
		        android:inputType="textPassword" >
		        
		        <requestFocus />        
		    </EditText>
		    
		    <EditText
		        android:id="@+id/fragment_password_change_edittext_passwordrepeat"
		        style="@style/style_edittext_dialog"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/fragment_password_change_edittext_passwordrepeat_hint"
		        android:inputType="textPassword" >
		 
		    </EditText>
		
		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/TextView02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="Введите текущий пароль"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		    <EditText
		        android:id="@+id/fragment_password_change_edittext_currentpassword"
		        style="@style/style_edittext_dialog"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:gravity="center"
		        android:hint="@string/fragment_password_change_edittext_currentpassword_hint"
		        android:inputType="textPassword"
		        android:maxLength="10" >
		        
		    </EditText>
		    
		    <Button
		        android:id="@+id/fragment_password_change_button_send"
		        style="@style/style_button_dialog"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/fragment_password_change_button_send" />
		
		    <Button
		        android:id="@+id/fragment_password_change_button_cancel"
		        style="@style/style_button_dialog_alter"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/fragment_password_change_button_cancel" />
		    
		</LinearLayout>
		
	</LinearLayout>		
	
</ScrollView>