<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >
	
    <LinearLayout
        android:id="@+id/fragment_payment_visa_layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/window_pading"
        android:visibility="gone" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/fragment_payment_visa_textview_amount"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/fragment_payment_visa_textview_amount_summary"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    </LinearLayout>
	
	    <EditText
	        android:id="@+id/fragment_payment_visa_edittext_amount"
	        style="@style/style_edittext_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="numberDecimal"
	        android:maxLength="7"
	        android:nextFocusDown="@+id/fragment_payment_cardact_edittext_code_one"
	        android:nextFocusForward="@+id/fragment_payment_cardact_edittext_code_one"
	        android:nextFocusRight="@+id/fragment_payment_cardact_edittext_code_one" >
	
	        <requestFocus />
	    </EditText>
	
	    <Button
	        android:id="@+id/fragment_payment_visa_button_pay"
	        style="@style/style_button_dialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/fragment_payment_visa_button_pay" />
	
	    <Button
	        android:id="@+id/fragment_payment_visa_button_back"
	        style="@style/style_button_dialog_alter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/fragment_payment_visa_button_back" />
	    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/fragment_payment_visa_layout_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <WebView
            android:id="@+id/fragment_payment_visa_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
	    
        <Button
	        android:id="@+id/fragment_payment_visa_button_close"
	        style="@style/style_button_dialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/fragment_payment_visa_button_close" />

    </LinearLayout>

</LinearLayout>