<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
        
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">

		<LinearLayout
		    android:id="@+id/fragment_regdata_layout"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1.0"
		    android:gravity="center_horizontal"
		    android:orientation="vertical"
		    android:padding="10dp" >
	
			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="Данные пользователя"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
		
			<android.support.v7.widget.RecyclerView
			    android:id="@+id/fragment_regdata_recyclerview"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp" />
	
			<Button
		        android:id="@+id/fragment_regdata_button_edit"
		        style="@style/style_button_dialog"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/window_pading"
		        android:text="@string/fragment_regdata_button_edit" />
			
			<Button
			    android:id="@+id/fragment_regdata_button_password_change"
			    style="@style/style_button_dialog"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/fragment_regdata_button_password_change" />
		
		    <Button
		        android:id="@+id/fragment_regdata_button_back"
		        style="@style/style_button_dialog_alter"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:text="@string/fragment_regdata_button_back" />
		
		</LinearLayout>
	
	</LinearLayout>
</ScrollView>